<resources>
    <string name="app_name">Quiz App Project</string>
    <string name="apple_checkbox">Apple</string>
    <string name="tidal_checkbox">Tidal</string>
    <string name="spotify_checkbox">Spotify</string>
    <string name="Grade_My_Quiz">Grade_My_Quiz</string>
    <string name="lastfm">lastfm</string>
    <string name="apple_music">Apple_Music</string>
    <string name="IUMA">IUMA</string>
    <string name="JayZ">JayZ</string>
    <string name="Kanye">Kanye</string>
    <string name="Eminem">Eminem</string>
    <string name="scoreMessage">createQuizScore</string>
     </resources>
