<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="Music Streaming Quiz"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:inputType="textCapWords"
        android:paddingTop="12dp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Which are music streaming apps? "
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/apple_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apple_checkbox"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckBox
        android:id="@+id/tidal_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tidal_checkbox"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckBox
        android:id="@+id/spotify_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotify_checkbox"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:text=" What famous rapper owns Tidal?"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/JayZ_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/JayZ" />

        <RadioButton
            android:id="@+id/Kanye_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/Kanye" />

        <RadioButton
            android:id="@+id/Eminem_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/Eminem" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:text=" What was the first music streaming site? "
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/IUMA_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/IUMA" />

        <RadioButton
            android:id="@+id/apple_music_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/apple_music" />

        <RadioButton
            android:id="@+id/lastfm_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/lastfm" />

    </RadioGroup>

       <Button
        android:id="@+id/Grade_My_Quiz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_gravity="center_horizontal"
        android:text="Grade My Quiz"
        android:onClick="gradeMyQuiz"/>

</LinearLayout>

</ScrollView>